--- a/front_end/public/index.html
+++ b/front_end/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Let's share your references with children in the world!"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/C-icon192.svg" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/C-icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
