fixed public/index.html to show image when shared

--- a/front_end/public/index.html
+++ b/front_end/public/index.html
@@ -9,6 +9,14 @@
       name="description"
       content="Let's share your references with children in the world!"
     />
+    <meta property="og:title" content="CanCan Education Center" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="%PUBLIC_URL%/C-icon512.png" />
+    <meta property="og:site_name" content="CanCan Education Center" />
+    <meta
+      property="og:description"
+      content="Let's share your references with children in the world!"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/C-icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
