--- a/front_end/public/index.html
+++ b/front_end/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/C-icon-sm.png" />
+    <link rel="icon" href="%PUBLIC_URL%/C-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
